--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,15 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "dev":"npx tailwindcss -i ./styles/tailwind.css -o ./styles/output.css --watch"
+    "dev": "npx tailwindcss -i ./styles/tailwind.css -o ./styles/output.css --watch"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.12.16",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
